services/k8s/03-app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  labels:
    app: app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: api_service:1.0.0
          ports:
            - name: web
              containerPort: 9797

---
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  ports:
    - name: web
      port: 9797
      targetPort: web

  selector:
    app: app
