services/k8s/services.yaml
# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 9797

---
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 1234
