services/k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
spec:
  rules:
    - http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: socket
                port:
                  name: web
          - path: /socket.io/2
            pathType: Prefix
            backend:
              service:
                name: socket2
                port:
                  name: web
